@@ -1,3 +1,9 @@
+2003-06-13  Hiroyuki Ito <hito@crl.go.jp>
+
+	* [w3m-dev 03913] fix gif animation support
+	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load): fix gif animation
+	* w3mimg/x11/x11_w3mimg.c (x11_load_image): ditto
+
 2003-05-15  Akinori Ito <aito@fw.ipsj.or.jp>
 
 	* [w3m-dev 03902] Re: table rendering
@@ -7844,4 +7850,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.840 2003/05/14 16:01:32 ukai Exp $
+$Id: ChangeLog,v 1.841 2003/06/13 15:03:02 ukai Exp $
